# clairvoyant

./: CMakeLists.txt  README.md
clairvoyant/: clairvoyant.h
examples/: CMakeLists.txt  tic_tac_toe.cpp
include/: Graph.hpp  Search.hpp  Vector.hpp  clairvoyant.hpp  graph.hpp  math.hpp  model.hpp  neural.hpp  neural_network.hpp  utility.hpp
include/math/: adouble.hpp  auto_double.hpp  eigen.hpp  math.hpp
include/neural_network/: mnist.hpp  neural_network.hpp
modules/: CMakeLists.txt
modules/graph/include/: graph.hpp
modules/neural_network/: CMakeLists.txt
modules/neural_network/include/: auto_diff.hpp  auto_double.hpp  matrix.hpp  neural_network.hpp
modules/neural_network/tests/: test_derivative.cpp  test_neural_network.cpp  test_neuron.cpp
tests/: CMakeLists.txt  test_adouble.cpp  test_auto_diff.cpp  test_breadth_first_search.cpp  test_dynamic_graph.cpp  test_eigen.cpp  test_graph.cpp  test_lambda.cpp  test_mnist.cpp  test_model.cpp  test_neural_network.cpp  test_neuron.cpp  test_nn_sin.cpp  test_search.cpp
